# Agent-Mem-IO

./: .gitignore  CMakeLists.txt  MEGA_PROMPT.md  PROGRESS.md  README.md  ROADMAP.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GUIDE.md  PAPER.md  PROBLEM.md  REPORT.md  TESTING.md
plans/: AUDIT_REPORT.md  AUDIT_REPORT_V2.md  AUDIT_REPORT_V3.md  AUDIT_REPORT_V4.md  AUDIT_REPORT_V5.md  AUDIT_REPORT_V6.md  AUDIT_REPORT_V7.md  OPTIMIZATION_PLAN.md  V5_FIX_PLAN.md  V7_OPTIMIZATION_PLAN.md
scripts/: download_sift1m.sh
solution/: 01-initial-idea.md  02-architecture.md  03-implementation.md  04-optimization.md  05-experiments.md  06-lessons.md  07-audit-history.md  README.md
src/: benchmark.cpp  main.cpp
src/bindings/: CMakeLists.txt  python_bindings.cpp
src/buffer/: buffer_pool.cpp  buffer_pool.h  eviction_policy.cpp  page.cpp
src/common/: types.h
src/compaction/: compaction_manager.cpp  memtable.cpp  memtable.h  sstable.cpp  wal.cpp
src/core/: distance.cpp  graph_index.cpp  graph_index.h  pq_encoder.cpp  pq_encoder.h  simd_distance.cpp  simd_distance.h  vamana_builder.cpp  vector_dataset.cpp  visited_bitmap.h
src/data/: sift_loader.h  synthetic_data.h
src/engine/: prefetcher.cpp  query_processor.cpp  storage_engine.cpp  storage_engine.h
src/io/: direct_io.cpp  disk_layout.cpp  disk_layout.h  file_manager.cpp  io_uring_engine.cpp  io_uring_engine.h
tests/: test_main.cpp
